# open_mower_ros

./: .gitmodules
.github/workflows/: build-image.yaml
src/mavros/: CMakeLists.txt  package.xml
src/mower_control/: CMakesLists.txt
src/mower_control/src/: esc_status_publisher.cpp  package.xml
src/mower_mavros/launch/: gamepad_and_gps.launch  gamepad_remote_control.launch  move_around.launch  open_mower.launch  remote_gamepad_control.launch  remote_rviz.launch  sim_mower_logic.launch  sim_navigation.launch  test_playback.launch
src/mower_mavros/launch/include/: _gps.launch  _localization.launch  _move_base.launch  _ntrip_client.launch  _record.launch  _rosbridge.launch  _teleop.launch
src/mower_utils/: CMakeLists.txt  package.xml
src/mower_utils/launch/: planner_test.launch
src/mower_utils/rviz/: planner_test.rviz
src/mower_utils/src/: mavros_pose_converter.cpp  planner_test.cpp
src/mowgli/: CMakeLists.txt  packages.xml
src/mowgli/srv/: ChargeCtrlSrv.srv
src/open_mower/: CMakeLists.txt  package.xml
src/open_mower/params/gamepads/: ps3.yaml  steam_stick.yaml  steam_touch.yaml
src/open_mower/rviz/: playback.rviz  record_map.rviz  sim_mower_logic.rviz  sim_navigation_test.rviz  sim_record_area.rviz
web/: .last_build_id  flutter_bootstrap.js  flutter_service_worker.js  main.dart.js
