## Adapted for MAVROS by [Pepeuch] on [11/1/2024]
<?xml version="1.0"?>
<package format="2">
  <name>mower_utils</name>
  <version>0.0.0</version>
  <description>The mower_utils package</description>

  <maintainer email="clemens@todo.todo">clemens</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Build dependencies -->
  <build_depend>open_mower</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>mavros_msgs</build_depend>

  <!-- Export dependencies for other packages that build against this package -->
  <build_export_depend>open_mower</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>mavros</build_export_depend>
  <build_export_depend>mavros_msgs</build_export_depend>

  <!-- Runtime dependencies -->
  <exec_depend>open_mower</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>

  <!-- Other dependencies -->
  <depend>xbot_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
